added props and events pages and started styling index page

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,4 +2,10 @@
 
 .list-inline-menucontainer {
     text-align: left;
+    color: black;
+}
+
+.container.fluid {
+    background-color: #800080;
+     color: yellow;
 }
